--- a/index.html
+++ b/index.html
@@ -431,8 +431,88 @@
     </div>
 </section>
 
-
 <!-- Package Section Ends  -->
+
+<!-- Booking Section  -->
+<section>
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="booking p-5">
+                <div class="row g-5 align-items-cneter">
+                    <div class="col-md-6 text-white">
+                        <h6 class="text-white text-uppercase">Booking</h6>
+                        <h1 class="text-white mb-4">Online Booking</h1>
+                        <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, voluptatibus?</p>
+                        <p class="m-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque velit molestiae cum corporis unde est obcaecati quis rerum et voluptas.</p>
+                        <a href="" class="btn btn-outline-light py-3 px-5 mt-2">Read More</a>
+                    </div>
+                    <div class="col-md-6">
+                        <h1 class="text-white mb-4">Booking A Tour</h1>
+                        <form action="">
+                            <div class="row g-3">
+
+                                <div class="col-md-6">
+                                    <div class="form-floating">
+                                        <input type="text" class="form-control bg-transparent" id="name"placeholder="Your Name">
+                                        <label for="name">Your Name</label>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <div class="form-floating">
+                                        <input type="email" class="form-control bg-transparent" id="email"placeholder="Your Email">
+                                        <label for="email">Your Email</label>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-6">
+                                    <div class="form-floating" id="date3">
+                                        <input type="text" class="form-control bg-transparent" id="datetime">
+                                        <label for="datetime">Date & Time</label>
+                                    </div>
+                                </div>
+
+                                <!-- Select Box -->
+                                <div class="col-md-6">
+                                    <div class="form-floating">
+                                        <select name="" id="select1" class="form-select bg-transparent">
+                                            <option value="1">Destinaiton 1</option>
+                                            <option value="2">Destinaiton 2</option>
+                                            <option value="3">Destinaiton 3</option>
+                                        </select>
+                                        <label for="select1" class=""></label>
+                                    </div>
+                                </div>
+
+                                <div class="col-12">
+                                    <div class="form-floating">
+                                        <textarea class="form-control bg-transparent" placeholder="Special Request" id="message" style="height: 100px;" ></textarea>
+                                         <label for="message">Special Request</label>
+                                    </div>
+                                </div>
+
+                                <!-- Button  -->
+                                <div class="col-12">
+                                    <button class="btn btn-outline-light w-100 py-3" type="submit">Book Now</button>
+                                </div>
+
+
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+<!-- Booking Section Ends  -->
+
+
+
+
+
 
 
 
