Raw First Update

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="row g-5">
                 <div class="col-lg-6" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img src="./img/about.jpg" alt="" style="object-fit: cover;" class="img-fluid position-absolute w-100 h-100">
+                        <img src="./img/About_us.png" alt="" style="object-fit: cover;" class="img-fluid position-absolute w-100 h-100">
                     </div>
                 </div>
 
@@ -245,25 +245,25 @@
 
                         <div class="col-lg-12 col-md-12">
                             <a href="" class="d-block position-relative overflow-hidden">
-                                <img src="./img/destination-1.jpg" alt="" class="img-fluid">
+                                <img src="./img/popular1_sundorban.png" alt="" class="img-fluid">
                                 <div class="bg-white text-danger fw-bold position-absolute top-0 start-0 m-3 py-1 px-2 ">30% off</div>
-                                <div class="bg-white text-primary fw-bold position-absolute bottom-0 end-0 m-3 py-1 px-2">Thailand</div>
+                                <div class="bg-white text-primary fw-bold position-absolute bottom-0 end-0 m-3 py-1 px-2">Sundarbans</div>
                             </a>
                         </div>
 
                         <div class="col-lg-6 col-md-12">
                             <a href="#" class="d-block position-relative overflow-hidden">
-                                <img src="./img/destination-2.jpg" alt="" class="img-fluid">
+                                <img src="./img/Popular2_Srimongol.png" alt="" class="img-fluid">
                                 <div class="bg-white text-danger fw-bold position-absolute top-0 start-0 m-3 py-1 px-2 ">50% off</div>
-                                <div class="bg-white text-primary fw-bold position-absolute bottom-0 end-0 m-3 py-1 px-2">Malaysia</div>
+                                <div class="bg-white text-primary fw-bold position-absolute bottom-0 end-0 m-3 py-1 px-2">Srimagal</div>
                             </a>
                         </div>
 
                         <div class="col-lg-6 col-md-12">
                             <a href="#" class="d-block position-relative overflow-hidden">
-                                <img src="./img/destination-3.jpg" alt="" class="img-fluid">
+                                <img src="./img/popular3_Rangamati.png" alt="" class="img-fluid">
                                 <div class="bg-white text-danger fw-bold position-absolute top-0 start-0 m-3 py-1 px-2 ">25% off</div>
-                                <div class="bg-white text-primary fw-bold position-absolute bottom-0 end-0 m-3 py-1 px-2">Australia</div>
+                                <div class="bg-white text-primary fw-bold position-absolute bottom-0 end-0 m-3 py-1 px-2">Rangamati</div>
                             </a>
                         </div>
 
@@ -272,9 +272,9 @@
 
                 <div class="col-lg-5 col-md-6" style="min-height: 350px;">
                     <a href="" class="d-block position-relative h-100 overflow-hidden">
-                        <img src="./img/destination-4.jpg" alt="" class="img-fluid position-absolute w-100 h-100" style="object-fit: cover;">
+                        <img src="./img/popular4_Lalbag Fort.png" alt="" class="img-fluid position-absolute w-100 h-100" style="object-fit: cover;">
                         <div class="bg-white text-danger fw-bold position-absolute top-0 start-0 m-3 py-1 px-2">20% off</div>
-                        <div class="bg-white text-primary fw-bold position-absolute bottom-0 end-0 m-3 py-1 px-2">Indonesia</div>
+                        <div class="bg-white text-primary fw-bold position-absolute bottom-0 end-0 m-3 py-1 px-2">Lalbag Fort</div>
                     </a>
                 </div>
 
@@ -309,7 +309,7 @@
 
                         <div class="d-flex border-bottom">
                             <small class="flex-fill text-center border-end py-2">
-                                <i class="fa fa-map-marker-alt text-primary me-2">Thailand</i>
+                                <i class="fa fa-map-marker-alt text-primary me-2">Patenga Sea Beach</i>
                             </small>
 
                             <small class="flex-fill text-center border-end py-2">
@@ -351,7 +351,7 @@
 
                         <div class="d-flex border-bottom">
                             <small class="flex-fill text-center border-end py-2">
-                                <i class="fa fa-map-marker-alt text-primary me-2">Indonesia</i>
+                                <i class="fa fa-map-marker-alt text-primary me-2">Kuakata Sea Beach</i>
                             </small>
 
                             <small class="flex-fill text-center border-end py-2">
@@ -392,7 +392,7 @@
 
                         <div class="d-flex border-bottom">
                             <small class="flex-fill text-center border-end py-2">
-                                <i class="fa fa-map-marker-alt text-primary me-2">Malaysia</i>
+                                <i class="fa fa-map-marker-alt text-primary me-2">Bisanakandi</i>
                             </small>
 
                             <small class="flex-fill text-center border-end py-2">
@@ -510,6 +510,13 @@
 <!-- Booking Section Ends  -->
 
 
+<!-- Process Start Section  -->
+<section>
+    
+</section>
+
+
+<!-- process start Section ends  -->
 
 
 
