--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
         <!-- About Section Ends  -->
 
-        <!-- Blog -Section  -->
+        <!-- Blog -Section starts  -->
 
 
          <section>
@@ -139,7 +139,7 @@
                             <img src="./img/blog_img3.png" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">Beauty of Chittagong</h5>
-                              <p class="card-text">Chittagong has a population of 2.5 million which is nothing when you compare it to other cities like Dhaka.That said, this frenetic port town is still worth a visit, particularly if you are traveling to the beautiful Hill Tracts of Bangladesh.These gorgeous trails that include pretty Foy’s Lake are hidden along scenic valleys and Chittagong is widely considered to be the jumping off point if you are planning a trek.In the city proper you will find Chittagong Ship Breaking Yard where you can see hulking tankers being ripped apart, and other spots of interest include the shrine of Sufi Amanat Khan, one of the most revered saints in Bangladesh.</p>
+                              <p class="card-text">Chittagong has a population of 2.5 million which is nothing when you compare it to other cities like Dhaka.That said, this frenetic port town is still worth a visit, particularly if you are traveling to the beautiful Hill Tracts of Bangladesh.These gorgeous trails that include pretty Foy’s Lake are hidden along scenic valleys and Chittagong is widely considered to be the jumping off point if you are planning a trek.In the city proper you will find Chittagong Ship Breaking Yard where you can see hulking tankers being ripped apart, and other spots of interest.</p>
                             </div>
                           </div>
                         </div>
