--- a/index.html
+++ b/index.html
@@ -593,6 +593,71 @@
 
 <!-- process start Section ends  -->
 
+<!-- Travel guide  -->
+<section>
+
+</section>
+
+<!-- Travel guide ends  -->
+
+<!-- Testimonial section  -->
+<section>
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="text-center">
+                <h6 class="section-title bg-white text-center text-primary px-3">Testimonial</h6>
+                <h1 class="mb-5">Our Clients Say!!!</h1>
+            </div>
+
+            <div class="owl-carousel testimonial-carousel position-relative">
+                <div class="testimonial-item bg-white text-center border p-4">
+                    <img src="./img/testimonial-1.jpg" alt="" class="bg-white rounded-circle shadow p-1 mx-auto mb-3" style="width:80px ; height: 80px;">
+
+                    <h5 class="mb-0">Jarin Hasan</h5>
+                    <p>Dhanmondi,Dhaka</p>
+                    <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque temporibus quas fugiat suscipit perferendis ad!</p>
+
+                </div>
+
+                <div class="testimonial-item bg-white text-center border p-4">
+                    <img src="./img/testimonial-2.jpg" alt="" class="bg-white rounded-circle shadow p-1 mx-auto mb-3" style="width:80px ; height: 80px;">
+
+                    <h5 class="mb-0">Kamal Sheikh</h5>
+                    <p>Gulshan-2,Dhaka</p>
+                    <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque temporibus quas fugiat suscipit perferendis ad!</p>
+
+                </div>
+
+                <div class="testimonial-item bg-white text-center border p-4">
+                    <img src="./img/testimonial-3.jpg" alt="" class="bg-white rounded-circle shadow p-1 mx-auto mb-3" style="width:80px ; height: 80px;">
+
+                    <h5 class="mb-0">Rony Dewan</h5>
+                    <p>Mouchak,Dhaka</p>
+                    <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque temporibus quas fugiat suscipit perferendis ad!</p>
+
+                </div>
+
+                <div class="testimonial-item bg-white text-center border p-4">
+                    <img src="./img/testimonial-4.jpg" alt="" class="bg-white rounded-circle shadow p-1 mx-auto mb-3" style="width:80px ; height: 80px;">
+
+                    <h5 class="mb-0">Rodela Jahan</h5>
+                    <p>Banani, Dhaka</p>
+                    <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque temporibus quas fugiat suscipit perferendis ad!</p>
+
+                </div>
+
+
+
+
+            </div>
+
+
+        </div>
+    </div>
+</section>
+
+<!-- Testimonial section ends  -->
+
 
 
 
@@ -611,6 +676,8 @@
     
     <!-- jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
     <!-- BtsJs -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
