--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <header>
         <!-- navbar -->
 
+
+
         <!-- navbar ends  -->
 
         <!-- first-section -->
@@ -665,6 +667,101 @@
 
 
     </main>
+
+<!-- Footer Section Starts  -->
+    <div class="container-fluid bg-dark text-light footer pt-5 mt-5">
+        <div class="container py-5">
+            <div class="row g-5">
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">Company</h4>
+                    <a href="" class="btn btn-link">About us</a>
+                    <a href="" class="btn btn-link">Contact us</a>
+                    <a href="" class="btn btn-link">Privacy Policy</a>
+                    <a href="" class="btn btn-link">FAQ</a>
+                </div>
+
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">Contact</h4>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 street,Gulshan-2,Dhaka</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+880 175 555 5555</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@gmail.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 street,Gulshan-2,Dhaka</p>
+
+                    <div class="d-flex pt-2">
+                        <a href="" class="btn btn-outline-light btn-social">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="" class="btn btn-outline-light btn-social">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="" class="btn btn-outline-light btn-social">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                        <a href="" class="btn btn-outline-light btn-social">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                    </div>
+
+                </div>
+
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">Gallery</h4>
+
+                    <div class="row g-2 pt-2">
+                        <div class="col-4">
+                            <img src="./img/package-1.jpg" alt="" class="img-fluid bg-light p-1">
+                        </div>
+                        <div class="col-4">
+                            <img src="./img/package-2.jpg" alt="" class="img-fluid bg-light p-1">
+                        </div>
+                        <div class="col-4">
+                            <img src="./img/package-3.jpg" alt="" class="img-fluid bg-light p-1">
+                        </div>
+                        <div class="col-4">
+                            <img src="./img/package-1.jpg" alt="" class="img-fluid bg-light p-1">
+                        </div>
+                        <div class="col-4">
+                            <img src="./img/package-1.jpg" alt="" class="img-fluid bg-light p-1">
+                        </div>
+                        <div class="col-4">
+                            <img src="./img/package-1.jpg" alt="" class="img-fluid bg-light p-1">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6">
+                    <h4 class="text-white mb-3">NewsLetter</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores optio cum adipisci quisquam veniam minus.</p>
+                    <div class="position-relative mx-auto" style="max-width: 400px;">
+                        <input type="text" name="" id="" class="form-control border-primary w-100 py-3 ps-4 pe-5" placeholder="Your Email">
+                        <button class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2" type="button">SignUp</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+       <!-- Copyright   -->
+       <div class="container">
+        <div class="copyright">
+            <div class="row">
+                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">&copy; <a href="" class="border-bottom">Mystery Code</a>|All right Reserved.</div>
+                <div class="col-md-6 text-center text-md-end">
+                    <div class="footer-menu">
+                        <a href="">Home</a>
+                        <a href="">Cookies</a>
+                        <a href="">Help</a>
+                        <a href="">FAQs</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+       </div>
+    </div>
+
+
+
+<!-- Footer Section Ends  -->
 
 
 
