--- a/registration.html
+++ b/registration.html
@@ -3,6 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
+    <title>Register</title>
  
     <link rel="stylesheet" href="CSS/registration.css">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
