--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <div class="row gx-0">
                 <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
                     <div class="d-inline-flex align-items-center" style="height: 45px;">
-                        <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</small>
-                        <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+012 345 6789</small>
-                        <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@example.com</small>
+                        <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>123 Street, Gulshan-2, Dhaka</small>
+                        <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+08801755555555</small>
+                        <small class="text-light"><i class="fa fa-envelope-open me-2"></i>tourplanner@gmail.com</small>
                     </div>
                 </div>
                 <div class="col-lg-4 text-center text-lg-end">
@@ -151,7 +151,7 @@
                    </div>
 
                    <!-- button  -->
-                   <div class="btn btn-primary py-3 px-5 mt-2">Read More</div>
+                   <div class="btn btn-primary py-3 px-5 mt-2"><a style="text-decoration: none ; color: cornsilk;" href="about.html">Read More</a></div>
 
 
                 </div>
