--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact</title>
+    <link rel="stylesheet" type="text/css" href="./CSS/contactCss/style.css">
+    <!-- Font Awesome  -->
+    <script src="https://kit.fontawesome.com/9bc8e7e181.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>this is contact section </h1>
+    <section class="contact">
+        <div class="content">
+            <h2>Contact Us</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe illum perspiciatis necessitatibus velit obcaecati tenetur sapiente aliquam amet, ab delectus!</p>
+        </div>
+        <div class="container">
+            <div class="contactInfo">
+                <div class="box">
+                    <div class="icon"><i class="fa-solid fa-location-dot"></i>  </div>
+                    <div class="text">
+                        <h3>Address</h3>
+                        <p>1202 Gulshan-2, <br> Dhaka</p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="icon"> <i class="fa-solid fa-phone"></i> </div>
+                    <div class="text">
+                        <h3>Phone</h3>
+                        <p>+08801755555555</p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="icon"><i class="fa-solid fa-envelope"></i>  </div>
+                    <div class="text">
+                        <h3>Email</h3>
+                        <p>tourplanner@gmail.com</p>
+                    </div>
+                </div>
+            </div>
+            <div class="contactForm">
+                <form action="">
+                    <h2>Send Message</h2>
+                    <div class="inputBox">
+                        <input type="text" name="" id="" required>
+                        <span>Full Name</span>
+                    </div>
+                    <div class="inputBox">
+                        <input type="email" name="" id="" required>
+                        <span>Email</span>
+                    </div>
+                    <div class="inputBox">
+                        <textarea name="" id="" cols="30" rows="10" required></textarea>
+                        <span>Type your message..</span>
+                    </div>
+                    <div class="inputBox">
+                        <input type="submit" name="" id="" value="Send" required>
+                        
+                    </div>
+                </form>
+            </div>
+        </div>
+
+    </section>
+
+    
 </body>
 </html>
