testimonial + Contact + Services page

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                 </div>
 
                 <div class="col-lg-6">
-                    <h6 class="section-title bg-white text-start text-primary pe-3">About Us</h6>
-                    <h1 class="mb-4">Welcome to <span class="text-primary">Tour Planner</span></h1>
+                    <h1 class="section-title bg-white text-center text-dark pe-3">About Us</h1>
+                    <h2 class="mb-4">Welcome to <span class="text-primary">Tour Planner</span></h2>
 
 
 
@@ -171,7 +171,7 @@
             <div class="container-xxl py-5">
                 <div class="container">
                     <div class="text-center">
-                        <h6 class="section-title bg-white text-center text-primary px-3">Blogs</h6>
+                        <!-- <h6 class="section-title bg-white text-center text-primary px-3">Blogs</h6> -->
                         <h1 class="mb-5">Trending Blogs</h1>
                     </div>
                     
@@ -244,7 +244,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center">
-                <h6 class="section-title bg-white text-center text-primary px-3">Services</h6>
+                <!-- <h6 class="section-title bg-white text-center text-primary px-3">Services</h6> -->
                 <h1 class="mb-5">Our Services</h1>
             </div>
             <div class="row g-4">
@@ -370,7 +370,7 @@
     <div class="container-xxl py-5 destination">
         <div class="container">
             <div class="text-center">
-                <h6 class="section-title bg-white text-center text-primary px-3">Destination</h6>
+                <!-- <h6 class="section-title bg-white text-center text-primary px-3">Destination</h6> -->
                 <h1 class="mb-5">Popular Destination</h1>
             </div>
 
@@ -431,7 +431,7 @@
         <div class="container">
             <div class="text-center">
                 <h6 class="section-title bg-white text-centerte text-primary px-3">Packages</h6>
-                <h1 class="mb-5">Awsome Package</h1>
+                <!-- <h1 class="mb-5">Awsome Package</h1> -->
             </div>
             <div class="row g-4 justify-content-center">
 
@@ -661,60 +661,6 @@
 <!-- Travel guide ends  -->
 
 <!-- Testimonial section  -->
-<section>
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-center">
-                <h6 class="section-title bg-white text-center text-primary px-3">Testimonial</h6>
-                <h1 class="mb-5">Our Clients Say!!!</h1>
-            </div>
-
-            <div class="owl-carousel testimonial-carousel position-relative">
-                <div class="testimonial-item bg-white text-center border p-4">
-                    <img src="./img/testimonial-1.jpg" alt="" class="bg-white rounded-circle shadow p-1 mx-auto mb-3" style="width:80px ; height: 80px;">
-
-                    <h5 class="mb-0">Jarin Hasan</h5>
-                    <p>Dhanmondi,Dhaka</p>
-                    <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque temporibus quas fugiat suscipit perferendis ad!</p>
-
-                </div>
-
-                <div class="testimonial-item bg-white text-center border p-4">
-                    <img src="./img/testimonial-2.jpg" alt="" class="bg-white rounded-circle shadow p-1 mx-auto mb-3" style="width:80px ; height: 80px;">
-
-                    <h5 class="mb-0">Kamal Sheikh</h5>
-                    <p>Gulshan-2,Dhaka</p>
-                    <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque temporibus quas fugiat suscipit perferendis ad!</p>
-
-                </div>
-
-                <div class="testimonial-item bg-white text-center border p-4">
-                    <img src="./img/testimonial-3.jpg" alt="" class="bg-white rounded-circle shadow p-1 mx-auto mb-3" style="width:80px ; height: 80px;">
-
-                    <h5 class="mb-0">Rony Dewan</h5>
-                    <p>Mouchak,Dhaka</p>
-                    <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque temporibus quas fugiat suscipit perferendis ad!</p>
-
-                </div>
-
-                <div class="testimonial-item bg-white text-center border p-4">
-                    <img src="./img/testimonial-4.jpg" alt="" class="bg-white rounded-circle shadow p-1 mx-auto mb-3" style="width:80px ; height: 80px;">
-
-                    <h5 class="mb-0">Rodela Jahan</h5>
-                    <p>Banani, Dhaka</p>
-                    <p class="mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque temporibus quas fugiat suscipit perferendis ad!</p>
-
-                </div>
-
-
-
-
-            </div>
-
-
-        </div>
-    </div>
-</section>
 
 <!-- Testimonial section ends  -->
 
