--- a/contact.html
+++ b/contact.html
@@ -1,71 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contact</title>
-    <link rel="stylesheet" type="text/css" href="./CSS/contactCss/style.css">
-    <!-- Font Awesome  -->
-    <script src="https://kit.fontawesome.com/9bc8e7e181.js" crossorigin="anonymous"></script>
+	<title>Contact us</title>
+	<link rel="stylesheet" type="text/css" href="./CSS/contactCss/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0">
 </head>
 <body>
-    <section class="contact">
-        <div class="content">
-            <h2>Contact Us</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe illum perspiciatis necessitatibus velit obcaecati tenetur sapiente aliquam amet, ab delectus!</p>
-        </div>
-        <div class="container">
-            <div class="contactInfo">
-                <div class="box">
-                    <div class="icon"><i class="fa-solid fa-location-dot"></i>  </div>
-                    <div class="text">
-                        <h3>Address</h3>
-                        <p>1202 Gulshan-2, <br> Dhaka</p>
-                    </div>
-                </div>
-
-                <div class="box">
-                    <div class="icon"> <i class="fa-solid fa-phone"></i> </div>
-                    <div class="text">
-                        <h3>Phone</h3>
-                        <p>+08801755555555</p>
-                    </div>
-                </div>
-
-                <div class="box">
-                    <div class="icon"><i class="fa-solid fa-envelope"></i>  </div>
-                    <div class="text">
-                        <h3>Email</h3>
-                        <p>tourplanner@gmail.com</p>
-                    </div>
-                </div>
-            </div>
-            <div class="contactForm">
-                <form action="">
-                    <h2>Send Message</h2>
-                    <div class="inputBox">
-                        <input type="text" name="" id="" required>
-                        <span>Full Name</span>
-                    </div>
-                    <div class="inputBox">
-                        <input type="email" name="" id="" required>
-                        <span>Email</span>
-                    </div>
-                    <div class="inputBox">
-                        <textarea name="" id="" cols="30" rows="10" required></textarea>
-                        <span>Type your message..</span>
-                    </div>
-                    <div class="inputBox">
-                        <input type="submit" name="" id="" value="Send" required>
-                        
-                    </div>
-                </form>
-            </div>
-        </div>
-
-    </section>
-
-    
+	<div class="container">
+		<div class="contact-box">
+			<div class="left"></div>
+			<div class="right">
+				<h2>Contact Us</h2>
+				<input type="text" class="field" placeholder="Your Name">
+				<input type="text" class="field" placeholder="Your Email">
+				<input type="text" class="field" placeholder="Phone">
+				<textarea placeholder="Message" class="field"></textarea>
+				<button class="btn">Send</button>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
