--- a/service.html
+++ b/service.html
@@ -4,9 +4,104 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Service</title>
+    <link rel="stylesheet" href="./CSS/ServiceCss/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Livvic:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,900&family=Urbanist:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <title>Services </title>
 </head>
 <body>
-    <h1>This is Service Section</h1>
+
+    <section class="section bg-color">
+        <div class="container">
+            <div class="row mb-5">
+                <div class="col-lg-5 col-md-8 m-auto">
+                    <div class="sub-heading text-center">
+                        <span>SERVICES</span>
+                        <h2>We Are Offering All Kinds Demanding Services</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row g-3">
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-box">
+                        <div class="service-icon mb-3">
+                            <img src="./img/s1.png" class="img-fluid w-25" alt="">
+                        </div>
+                        <div class="service-content">
+                            <h3 class="mb-3">Package Booking</h3>
+                            <p>At vero eos et accusamus etiusto odio praesentium accusamus etiusto 
+                                odio data center for managing database.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-box">
+                        <div class="service-icon mb-3">
+                            <img src="./img/s2.png" class="img-fluid w-25" alt="">
+                        </div>
+                        <div class="service-content">
+                            <h3 class="mb-3">User Guide</h3>
+                            <p>At vero eos et accusamus etiusto odio praesentium accusamus etiusto 
+                                odio data center for managing database.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-box">
+                        <div class="service-icon mb-3">
+                            <img src="./img/s3.png" class="img-fluid w-25" alt="">
+                        </div>
+                        <div class="service-content">
+                            <h3 class="mb-3">Event Management</h3>
+                            <p>At vero eos et accusamus etiusto odio praesentium accusamus etiusto 
+                                odio data center for managing database.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-box">
+                        <div class="service-icon mb-3">
+                            <img src="./img/s4.png" class="img-fluid w-25" alt="">
+                        </div>
+                        <div class="service-content">
+                            <h3 class="mb-3">Hotel Reservation</h3>
+                            <p>At vero eos et accusamus etiusto odio praesentium accusamus etiusto 
+                                odio data center for managing database.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-box">
+                        <div class="service-icon mb-3">
+                            <img src="./img/s5.png" class="img-fluid w-25" alt="">
+                        </div>
+                        <div class="service-content">
+                            <h3 class="mb-3">Bus Ticket Booking</h3>
+                            <p>At vero eos et accusamus etiusto odio praesentium accusamus etiusto 
+                                odio data center for managing database.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <div class="service-box">
+                        <div class="service-icon mb-3">
+                            <img src="./img/s6.png" class="img-fluid w-25" alt="">
+                        </div>
+                        <div class="service-content">
+                            <h3 class="mb-3">Free Books</h3>
+                            <p>At vero eos et accusamus etiusto odio praesentium accusamus etiusto 
+                                odio data center for managing database.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
