--- a/testimonial.html
+++ b/testimonial.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+<!--divinectorweb.com-->
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>testimonial</title>
+	<meta charset="UTF-8">
+	<title>Testimonials</title>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Allura&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap" rel="stylesheet">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet">
+	<link href="./CSS/Testimonial_Css/css/styles.css" rel="stylesheet">
 </head>
 <body>
-   <h1>this is testimonial section </h1> 
+    <h1 style="text-align: center; font-size: 32pt; font-weight: bold;">Testimonials</h1>
+	<div class="wrapper">
+		<div class="container">
+			<div class="carousel slide" data-ride="carousel" id="carousel-example-generic">
+				<!-- Indicators -->
+				<ol class="carousel-indicators">
+					<li class="active" data-slide-to="0" data-target="#carousel-example-generic"></li>
+					<li data-slide-to="1" data-target="#carousel-example-generic"></li>
+					<li data-slide-to="2" data-target="#carousel-example-generic"></li>
+				</ol><!-- Wrapper for slides -->
+				<div class="carousel-inner" role="listbox">
+					<div class="item active">
+						<div class="imgBox animated bounceInRight" style="animation-delay: 1s"><img alt="" src="./img/testimonial-1.jpg"></div>
+						<div class="carousel-caption animated bounceInLeft" style="animation-delay: 2s">
+							<h3>Nurjahan Banu</h3>
+							<h4>P.E Teacher</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum molestiae id rerum dolorum temporibus accusamus similique. Saepe cum omnis nisi praesentium voluptate doloremque magnam sequi.</p>
+						</div>
+					</div>
+					<div class="item">
+						<div class="imgBox animated bounceInRight" style="animation-delay: 1s"><img alt="" src="./img/testimonial-2.jpg"></div>
+						<div class="carousel-caption animated bounceInLeft" style="animation-delay: 2s">
+							<h3>Rahim Jaman</h3>
+							<h4>Software Engineer</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum molestiae id rerum dolorum temporibus accusamus similique. Saepe cum omnis nisi praesentium voluptate doloremque magnam sequi.</p>
+						</div>
+					</div>
+					<div class="item">
+						<div class="imgBox animated bounceInRight" style="animation-delay: 1s"><img alt="" src="./img/testimonial-3.jpg"></div>
+						<div class="carousel-caption animated bounceInLeft" style="animation-delay: 2s">
+							<h3>Fahim Hasan</h3>
+							<h4>Manager</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum molestiae id rerum dolorum temporibus accusamus similique. Saepe cum omnis nisi praesentium voluptate doloremque magnam sequi.</p>
+						</div>
+					</div>
+				</div><!-- Controls -->
+				 <a class="left carousel-control" data-slide="prev" href="#carousel-example-generic" role="button"><span aria-hidden="true" class="glyphicon glyphicon-chevron-left"></span> <span class="sr-only">Previous</span></a> <a class="right carousel-control" data-slide="next" href="#carousel-example-generic" role="button"><span aria-hidden="true" class="glyphicon glyphicon-chevron-right"></span> <span class="sr-only">Next</span></a>
+			</div>
+		</div>
+	</div>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js">
+	</script> 
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js">
+	</script>
 </body>
 </html>
