--- a/404.html
+++ b/404.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>404 Error Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/CSS/404/style.css">
 </head>
 <body>
-    <h1>Error 404</h1>
-    
+    <div class="wrapper">
+        <h2>Oops! Page not found.</h2>
+        <div>
+            <img src="/img/undraw_Page_not_found_re_e9o6.png" alt="404">
+        </div>
+        <h4>We can't fint the page you're looking for.</h4>
+        <button type="button" class="main-btn"><a style="text-decoration: none; color: whitesmoke; font-weight: 600;" href="index.html">HOME</a> </button>
+    </div>
 </body>
 </html>
+
