--- a/about.html
+++ b/about.html
@@ -27,6 +27,7 @@
 </head>
 <body>
 
+
  <section id="ABOUT">
      <div class="about-1">
          <h1> ABOUT US </h1>
@@ -65,6 +66,8 @@
          </div>
       </div>   
  </section>
+
+ <section></section>
     
 <!--our footer -->
  
