--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
         <div>
             <img src="/img/undraw_Page_not_found_re_e9o6.png" alt="404">
         </div>
-        <h4>We can't fint the page you're looking for.</h4>
+        <h4>We can't find the page you're looking for.</h4>
         <button type="button" class="main-btn"><a style="text-decoration: none; color: whitesmoke; font-weight: 600;" href="index.html">HOME</a> </button>
     </div>
 </body>
