--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
     <div class="wrapper">
         <h2>Oops! Page not found.</h2>
         <div>
-            <img src="/img/undraw_Page_not_found_re_e9o6.png" alt="404">
+            <img src="/img/404.png" alt="404">
         </div>
         <h4>We can't find the page you're looking for.</h4>
         <button type="button" class="main-btn"><a style="text-decoration: none; color: whitesmoke; font-weight: 600;" href="index.html">HOME</a> </button>
